--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "lowdb": "^1.0.0",
     "pug": "^2.0.3"
   },
   "devDependencies": {
