--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "lowdb": "^1.0.0",
-    "pug": "^2.0.3"
+    "pug": "^2.0.3",
+    "shortid": "^2.2.13"
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
