--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "nodemon --inspect index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -16,6 +16,7 @@
     "express": "^4.16.3",
     "lowdb": "^1.0.0",
     "md5": "^2.2.1",
+    "multer": "^1.4.0",
     "pug": "^2.0.3",
     "shortid": "^2.2.13"
   },
