--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.16.3",
     "lowdb": "^1.0.0",
     "md5": "^2.2.1",
+    "mongoose": "^5.3.0",
     "multer": "^1.4.0",
     "pug": "^2.0.3",
     "shortid": "^2.2.13"
